# csv-profiler

./: .gitignore  README.md  app.py  main.py  pyproject.toml  report.json
src/csv_profile.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/csv_profiler/: cli.py  io.py  profile.py  profiling.py  render.py
