[project]
name = "csv-profile"
version = "0.1.0"
description = "A CSV Profiler tool built during the AI Bootcamp"
readme = ""
requires-python = ">=3.11"

dependencies = [
    "streamlit>=1.30.0",
    "typer>=0.9.0",
    "pandas>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]